Fix story card spacing media query

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -232,6 +232,7 @@ header {
 
   div#story-card.story-card {
     max-width: 40rem;
+    margin: 0 1em 1em 1em;
   }
 }
 
